# simcpp20

./: .clang-format  .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  Makefile  README.md  example.cpp  simcpp2.cpp  simcpp2.hpp  simcpp20.cpp  simcpp20.hpp  test.cpp
.github/workflows/: linux.yml  windows.yml
examples/: CMakeLists.txt  all_of.cpp  any_of.cpp  any_of_process.cpp  bank.cpp  bank_renege.cpp  carwash.cpp  clocks.cpp  clocks_units.cpp  machine_shop.cpp  ping-pong.cpp  ping_pong.cpp  resource.hpp  store.cpp  value-event.cpp  value_event.cpp  value_process.cpp
include/fschuetz04/: resource.hpp  simcpp20.hpp
include/fschuetz04/simcpp20/: CMakeLists.txt  awaitable.hpp  event.hpp  process.hpp  promise_type.hpp  resource.hpp  simulation.hpp  store.hpp  value_event.hpp  value_process.hpp
simcpp20/: CMakeLists.txt  await_event.cpp  await_event.hpp  event.cpp  event.hpp  event_promise_type.cpp  event_shared_state.cpp  event_state.hpp  process.cpp  process.hpp  promise_type.cpp  scheduled_event.cpp  scheduled_event.hpp  simcpp20.cpp  simcpp20.hpp  simulation.cpp  simulation.hpp  types.hpp  value_event.hpp
tests/: CMakeLists.txt  awaitable_tests.cpp  resource_tests.cpp  store_tests.cpp  test.cpp  tests.cpp
